Added CreateUser and implemented  methods
